view/theme/frio/css/style.css
/* ... */
.media-list > li:hover,
.media-list > li.selected,
.media-list > li.active {
	border-left: 3px solid $link_color;
	background-color: rgba(247, 247, 247, $contentbg_transp);
}

/* Forms */
.form-control {
	box-shadow: none;
}
.form-control:focus {
	border: 2px solid $link_color;
	box-shadow: none;
}

.radio label::before,
.checkbox label::before {
	background-color: rgba(255, 255, 255, $contentbg_transp);
}
.radio label::after {
	background-color: $link_color;
}
.checkbox label::after {
	color: $link_color;
}

.checkbox input[type="checkbox"]:focus + label::before,
.radio input[type="radio"]:focus + label::before {
	outline-color: $link_hover_color;
}

.help-block {
	color: $font_color_darker;
}

input[type="range"].form-control {
	padding-left: 0;
	padding-right: 0;
}

/* Search form */
.form-control.form-search {
	border-radius: 30px;
	background-image: url(img/icon_search16x16.png);
	background-repeat: no-repeat;
	background-position: 10px 8px;
	padding-left: 34px;
}
.form-group-search {
	position: relative;
	width: 100%;
}

.form-group-search .form-button-search {
	position: absolute;
	top: 4px;
	right: 4px;
	border-radius: 30px;
}
.search-input.form-control.form-search {
	width: 100%;
}
.search-heading {
	text-align: center;
	color: $link_color;
	font-size: 20px;
}
.search-content-wrapper > #search-header-wrapper {
	display: none;
}
.search-content-wrapper > .section-title-wrapper {
	display: none;
}
#navbar-button > #search-save {
	margin-top: 3px;
}
/* Section-Content-Wrapper */
#search-header-wrapper {
	padding: 15px;
	padding-bottom: 20px;
	margin-bottom: 20px;
	border: none;
	background-color: rgba(255, 255, 255, $contentbg_transp);
	border-radius: 4px;
	position: relative;
	color: $font_color_darker;
	box-shadow: 0 0 3px #dadada;
	-webkit-box-shadow: 0 0 3px #dadada;
	-moz-box-shadow: 0 0 3px #dadada;
}

/* *******
 * PAGES
 *********/

section > .generic-page-wrapper,
.videos-content-wrapper,
.suggest-content-wrapper,
.help-content-wrapper,
.match-content-wrapper,
.dirfind-content-wrapper,
.delegation-content-wrapper,
.notes-content-wrapper,
.message-content-wrapper,
.apps-content-wrapper,
#adminpage,
.delegate-content-wrapper,
.uexport-content-wrapper,
.dfrn_request-content-wrapper,
.friendica-content-wrapper,
.credits-content-wrapper,
.nocircle-content-wrapper,
.profperm-content-wrapper,
.invite-content-wrapper,
.tos-content-wrapper,
.fsuggest-content-wrapper {
	min-height: calc(100vh - 150px);
	padding: 15px;
	padding-bottom: 20px;
	margin-bottom: 20px;
	border: none;
	background-color: rgba(255, 255, 255, $contentbg_transp);
	border-radius: 4px;
	position: relative;
	color: $font_color_darker;
	box-shadow: 0 0 3px #dadada;
	-webkit-box-shadow: 0 0 3px #dadada;
	-moz-box-shadow: 0 0 3px #dadada;
}
#content:hover .page-action.faded-icon {
	opacity: 0.8;
	transition: all 0.25s ease-in-out;
}
#content .page-action.faded-icon:hover {
	opacity: 1;
}

.section-title-wrapper {
	overflow: hidden;
}
/* Home and Login Page */
body.mod-home nav.navbar .nav > li > a:hover {
	background-color: rgba(255, 255, 255, 0.2);
}
body.mod-home .navbar #nav-login,
body.mod-login .navbar #nav-login {
	display: none;
}
/* Profile-page */
#profile-content-standard,
#profile-content-advanced {
	overflow: hidden;
}
#profile-menu {
	margin-top: 20px;
	margin-bottom: 20px;
}
.contact-block-div.group-list-profile-advanced {
	float: left;
}

/* contacts page */
ul.viewcontact_wrapper {
	margin-left: -15px;
	margin-right: -15px;
}
ul.viewcontact_wrapper > li {
	padding-left: 15px;
}
.contact-wrapper .contact-photo-wrapper button {
	padding: 0;
}
.contact-wrapper.media {
	overflow: visible;
	word-wrap: break-word;
	margin-top: 0;
}
/* bootstrap hack for .media */
.contact-wrapper.media .media-body {
	display: table-cell;
	width: 10000px;
	*width: auto;
	*zoom: 1;
}
.contact-wrapper.media:before,
.media:after {
	content: "";
	display: table;
}
.contact-wrapper.media:after {
	clear: both;
}
.contact-wrapper .contact-photo-image-wrapper img.contact-photo.xl {
	height: 80px;
	width: 80px;
}
.contact-wrapper .contact-photo-image-wrapper img.contact-photo-xs {
	height: 48px;
	width: 48px;
}
.contact-wrapper .contact-photo-overlay-content.xl {
	font-size: 48px;
}
.contact-wrapper .contact-photo-menu {
	top: auto;
}

.contact-entry-desc {
	color: $font_color_darker;
}
.contact-entry-checkbox {
	margin-top: -20px;
}
.contact-wrapper .media-body .contact-entry-name h1.media-heading a {
	font-weight: bold !important;
	color: $link_color;
	font-size: 15px !important;
}
.contact-wrapper .contact-actions {
	display: flex;
	position: relative;
	margin: -8px -8px 0 0;
}
.contact-wrapper .contact-action-link,
.contact-wrapper .contact-action-link:hover,
.textcomplete-item .contact-wrapper .contact-action-link {
	color: $font_color_darker;
	border: 0;
}
.contact-wrapper .contact-action-link {
	background-color: transparent;
	opacity: 0.3;
	transition: all 0.25s ease-in-out;
}
ul li:hover .contact-wrapper .contact-action-link:hover {
	opacity: 1;
}
#contacts-search-wrapper,
#directory-search-wrapper {
	padding: 10px 0;
}

/* contact-edit */
#contact-edit-actions {
	position: absolute;
}
#contact-edit-status-wrapper {
	border: none;
	background-color: rgba(225, 245, 254, $contentbg_transp);
	margin: 15px -15px;
}
#contact-edit-settings {
	display: block;
}

/* directory page */
#directory-search-heading {
	padding-top: 10px;
}

/* circle edit page */
.circle-actions {
	margin-top: 4px;
	margin-bottom: 10px;
	font-size: 30px;
}
.circle-actions button,
.circle-actions a {
	font-size: 18px;
}

.contact-circle-actions .fa-times-circle {
	color: #d00000;
}
.contact-circle-actions .fa-plus-circle {
	color: #008000;
}

#circle-edit-wrapper {
	margin-top: 14px;
	display: none;
}
#circle-edit-header {
	display: block;
}
#circle-update-wrapper .contact-photo-overlay {
	display: none;
}
/* ... */

